--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
 ---
 layout: default
 ---
+
+{% include header.html %}
+{% include about.html %}
+{% include download.html %}
+{% include contact.html %}
