--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 
-{% include header.html %}
-{% include about.html %}
-{% include download.html %}
+{% include megatron.html %}
+{% include libraries.html %}
+{% include webhooks.html %}
 {% include contact.html %}
