added slack button, and some copy

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@ layout: default
 ---
 
 {% include megatron.html %}
+{% include get_started.html %}
 {% include libraries.html %}
 {% include webhooks.html %}
 {% include contact.html %}
