--- a/index.html
+++ b/index.html
@@ -5,5 +5,5 @@ layout: default
 {% include megatron.html %}
 {% include get_started.html %}
 {% include libraries.html %}
-{% include webhooks.html %}
+{% include home_postslist.html %}
 {% include contact.html %}
