--- a/webhooks/index.html
+++ b/webhooks/index.html
@@ -34,7 +34,7 @@ layout: standardPage
 $(document).ready(function() {
 
 
-    jQuery.get('https://local.api.bombbomb.com/v2/webhook/events', function(data) {
+    jQuery.get('https://api.bombbomb.com/v2/webhook/events', function(data) {
         console.log(data);
         var container = jQuery("#webhookListing");
 
