fix incorrect scope

--- a/auth/index.html
+++ b/auth/index.html
@@ -29,7 +29,7 @@ layout: standardPage
         <p>Create a hyperlink from your application directing users to the OAuth Approval page. The user will elect to
             approve or not approve your request. If they approve, you'll receive back an <em>authorization code</em></p>
 
-        <pre>https://app.bombbomb.com/auth/authorize?client_id=<span style="color:red;">YOUR_ID_HERE</span>&scope=<span style="color:red;">manage:all</span>&redirect_uri=<span style="color:red;">YOUR_CALLBACK_URL</span>&response_type=code</pre>
+        <pre>https://app.bombbomb.com/auth/authorize?client_id=<span style="color:red;">YOUR_ID_HERE</span>&scope=<span style="color:red;">all:manage</span>&redirect_uri=<span style="color:red;">YOUR_CALLBACK_URL</span>&response_type=code</pre>
 
     </div>
 </div>
