legacy API page

--- a/auth/index.html
+++ b/auth/index.html
@@ -65,7 +65,7 @@ layout: standardPage
     <div class="col-lg-12">
 
         <h2>Make requests with your access token</h2>
-        <p>Now that you have an access token, you can use our <a href="/api">api</a> by providing an <code>Authorization</code> header with the format <code>Bearer [access token]</code></p>
+        <p>Now that you have an access token, you can use our <a href="/api">api</a> by providing an <code>Authorization</code> HTTP header with the format <code>Bearer [access token]</code></p>
 
     </div>
 </div>
