--- a/libs/index.html
+++ b/libs/index.html
@@ -12,8 +12,20 @@ layout: standardPage
     </div>
 </div>
 
+<div class="row">
+    <div class=" col-md-12 text-center">
 
+        <h1>Javascript Wrapper</h1>
 
+        <p>
+            The easiest way to get started with BombBomb’s API on your web site or application is to use our Javascript wrapper, BBCore.
+            BBCore is open source and available at https://github.com/bombbomb/BBCore
+            BBCore wraps the functionality exposed below into a simple Javascript interface allowing you to offer BombBomb features on your site or application
+            without having to write server-side code.
+        </p>
+
+    </div>
+</div>
 
 
 
