pretty formatting for BB Core in the developer site

--- a/libs/index.html
+++ b/libs/index.html
@@ -19,9 +19,9 @@ layout: standardPage
 
         <p>
             The easiest way to get started with BombBomb’s API on your web site or application is to use our Javascript wrapper, BBCore.
-            BBCore is open source and available at https://github.com/bombbomb/BBCore
             BBCore wraps the functionality exposed below into a simple Javascript interface allowing you to offer BombBomb features on your site or application
             without having to write server-side code.
+            BBCore is open source and available at <a href="https://github.com/bombbomb/BBCore">https://github.com/bombbomb/BBCore</a>
         </p>
 
     </div>
