Add neww information on UpdateContact endpoint

--- a/LegacyAPI/index.html
+++ b/LegacyAPI/index.html
@@ -137,10 +137,11 @@ layout: standardPage
         </div>
         <div class="well">
             <h3>UpdateContact</h3>
-            <p>Updates fields for a contact based on the email address</p>
+            <p>Updates fields for a contact based on the email address or id</p>
             <p><b>Parameters</b></p>
             <ul>
                 <li><b>eml</b> &#8211; The email address of the contact</li>
+                <li><b>id</b> &#8211; Optional. The contact ID for a contact, for updating an email</li>
                 <li><b>firstname</b> &#8211; Optional. The first name of the contact</li>
                 <li><b>lastname</b> &#8211; Optional. The last name of the contact</li>
                 <li><b>phone_number</b> &#8211; Optional. The phone number of the contact</li>
