Update LegacyAPI text and compile SASS styles

--- a/LegacyAPI/index.html
+++ b/LegacyAPI/index.html
@@ -12,7 +12,11 @@ layout: standardPage
         <h1>BombBomb's Legacy API</h1>
         <h3>There are two APIs that BombBomb makes available:<br /><br /></h3>
         <p>1. Our <a href="/api">V2 API</a>. This is a thoughtful, RESTful, OAuth2-only, and Swagger-compatible modern API. <em>We encourage you to focus your development on the <a href="/api">V2 API</a>.</em></p>
-        <p>2. The Legacy API, described below, has a little more character. It also has some functionality not yet available in V2, so we make it available to you here. <em style="color:red;">Be advised that our intention is to sunset the legacy API in the late 2018 timeframe.</em></p>
+        <p>
+            2. The Legacy API, described below, has a little more character. It also has some functionality not yet available in V2, so we make it available to you here. 
+            Our intentions are to make all supported legacy API available in V2 by the end of 2018. You should always opt to use a V2 call over the legacy when it is available. 
+            These are actively being maintained and will continue to grow as we build new calls in the future.
+        </p>
     </div>
 </div>
 
